--- a/Talkative.Infrastructure/Talkative.Infrastructure.csproj
+++ b/Talkative.Infrastructure/Talkative.Infrastructure.csproj
@@ -6,4 +6,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="HotChocolate.Authorization" Version="14.0.0-rc.2" />
+      <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Talkative.Domain\Talkative.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
