--- a/Talkative.Web/Talkative.Web.csproj
+++ b/Talkative.Web/Talkative.Web.csproj
@@ -15,9 +15,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-rc.2" />
         <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-rc.2" />
+        <PackageReference Include="HotChocolate.Authorization" Version="14.0.0-rc.2" />
+        <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.31" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -28,6 +39,11 @@
         </Content>
         <None Remove="$(SpaRoot)**" />
         <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Talkative.Application\Talkative.Application.csproj" />
+      <ProjectReference Include="..\Talkative.Infrastructure\Talkative.Infrastructure.csproj" />
     </ItemGroup>
 
     <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
