--- a/Talkative.Web/ClientApp/package.json
+++ b/Talkative.Web/ClientApp/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.9.0",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
@@ -39,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "nan": "^2.17.0",
+    "tailwindcss": "^3.4.12",
     "typescript": "^4.9.5"
   },
   "overrides": {
