--- a/Talkative.Application/Talkative.Application.csproj
+++ b/Talkative.Application/Talkative.Application.csproj
@@ -13,9 +13,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
-      <PackageReference Include="HotChocolate.Abstractions" Version="14.0.0-rc.2" />
-      <PackageReference Include="HotChocolate.Authorization" Version="14.0.0-rc.2" />
-      <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
+      <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.0.0" />
+      <PackageReference Include="HotChocolate.Data" Version="13.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
