--- a/Talkative.Web/ClientApp/package.json
+++ b/Talkative.Web/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.11.8",
     "bootstrap": "^5.2.3",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
@@ -17,6 +18,7 @@
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
     "rimraf": "^5.0.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
