--- a/Talkative.Web/Talkative.Web.csproj
+++ b/Talkative.Web/Talkative.Web.csproj
@@ -16,10 +16,9 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-rc.2" />
-        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-rc.2" />
-        <PackageReference Include="HotChocolate.Authorization" Version="14.0.0-rc.2" />
-        <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.0" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.0.0" />
+        <PackageReference Include="HotChocolate.Data" Version="13.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.31" />
