--- a/Talkative.Web/ClientApp/package.json
+++ b/Talkative.Web/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.11.8",
     "bootstrap": "^5.2.3",
     "graphql": "^16.9.0",
+    "graphql-sse": "^2.5.3",
     "graphql-ws": "^5.16.0",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
