User online status working
- Background worker with connected users
- OnUserStatusChanged Subscription
- SetUserStatus mutation which is being sent as pings every X seconds

--- a/Talkative.Application/Talkative.Application.csproj
+++ b/Talkative.Application/Talkative.Application.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Talkative.Domain\Talkative.Domain.csproj" />
       <ProjectReference Include="..\Talkative.Infrastructure\Talkative.Infrastructure.csproj" />
+      <ProjectReference Include="..\Talkative.Worker\Talkative.Worker.csproj" />
     </ItemGroup>
 
     <ItemGroup>
