--- a/Talkative.Domain/Talkative.Domain.csproj
+++ b/Talkative.Domain/Talkative.Domain.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-rc.2" />
       <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
