--- a/Talkative.Application/Talkative.Application.csproj
+++ b/Talkative.Application/Talkative.Application.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-rc.2" />
       <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-rc.2" />
       <PackageReference Include="HotChocolate.Data" Version="14.0.0-rc.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
